集成百度统计功能

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -9,9 +9,17 @@
 <link rel="stylesheet" href="js/bootstrap-4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="js/fontawesome-free-5.7.1/css/all.min.css">
 
-
-
 <title>二维码墙 - 扫开美好生活之门</title>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?6f7cf48ce4fe8a5be59a22a77f7af862";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 <body>
 
